[2022년 04월 20일] 스레드 동기화 추가 질문 답변

--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -258,6 +258,8 @@ child 프로세스의 fork 반환 값: 0
 <summary>프로세스 간 통신은 왜 필요한가요 ?</summary>
 <div markdown="1">
 
+프로세스는 데이터를 주고 받으며 협업하기 위해서 프로세스간 통신이 필요하다.
+
 </dib>
 
 </div>
@@ -266,6 +268,52 @@ child 프로세스의 fork 반환 값: 0
 <details>
 <summary>프로세스 간 통신의 방식엔 어떤 것들이 있나요 ?</summary>
 <div markdown="1">
+   
+   1. 전역 변수 
+   2. 파일
+   3. 익명 파이프
+   4. Named 파이프
+   5. 소켓 
+   6. 원격 프로시저 호출
+
+  1. 전역 변수 
+     - 전송자가 전역변수에 데이터를 쓰면, 수신자가 전역변수에서 데이터를 읽어간다.
+     - 운영체제의 지원 없이 사용 가능
+     - 단방향 통신
+     - 단방향 통신인 이유: 전역 변수 1개를 이용하여 두 프로세스가 동시에 데이터를 전송할 경우, 두 데이터 중 하나는 사라지기 때문이다.
+     - 직접적으로 관련있는 프로세스간에 주로 사용  
+     ex) 부모 프로세스와 자식 프로세스   
+     부모 프로세스가 선언한 전역 변수를 이용해 자식 프로세스와 통신할 수 있다.
+     - 운영체제가 동기화를 제공하지 않는다.   
+     = 바쁜 대기를 돌면서, 전역변수에 값이 들어왔는지 매번 체크해야 한다.
+
+  1. 파일
+    - 전송자가 파일에 데이터를 쓰면, 수신자가 그 데이터를 읽어가는 방식으로 통신한다.
+    - 운영체제의 지원없이 사용 가능
+    - 단방향 통신
+    - 운영체제가 동기화를 제공하지 않는다.  
+    = 부모 프로세스가 wait()함수를 호출하여, 자식 프로세스의 작업이 끝날 때까지 대기하는 방식으로 동기화한다.
+    
+
+  2. 익명 파이프
+    - 단방향 통신
+    - 운영체제에서 동기화를 지원한다. -> 바쁜대기를 하지 않아도 된다. 
+    = 수신자 프로세스가 파이프에 읽기 연산을 수행했을 때, 송신자 프로세스가 아직 파이프에 쓰기 연산을 하지 않았다면 수신자 프로세스는 대기 상태가된다. 이후, 송신자 프로세스가 파이프에 데이터를 쓰는 순가 대기상태에서 풀린다.
+    - 부모 프로세스와 자식 프로세스와 같이 서로 관련있는 프로세스간에만 사용
+
+  3. Named 파이프
+    - 단방향 통신  
+    - 서로 관련 없는 프로세스간 통신에도 사용된다.
+    
+    
+  4. 소켓 
+    - 양방향 통신
+    - 운영체제에서 동기화를 지원한다. -> 바쁜대기를 하지 않아도 된다.
+
+  5. 원격 프로시저 호출
+    - 다른 컴퓨터에 존재하는 메서드를 호출하는 것
+    - 일반적으로 소켓을 이용하여 구현한다.
+
 
 </div>
 </details>
@@ -274,6 +322,11 @@ child 프로세스의 fork 반환 값: 0
 <details>
 <summary>생산자-소비자 문제에 대해서 설명해보세요 </summary>
 <div markdown="1">
+- 생산자 프로세스는 공유 버퍼에 물건을 생산에서 넣는 역할을 한다.
+- 소비자 프로세스는 공유 버퍼에서 물건을 꺼내서 소비하는 역할을 한다.
+- 버퍼가 비었는지/가득찼는지 여부를 확인하기 위해, 자원의 총량을 갖는 sum 변수를 사용한다.
+- 생산자 프로세스와 소비자 프로세스가 sum 변수에 동시에 접근하기 때문에, 둘간에 동기화를 하지 않을 경우 sum 변수의 값이 잘 못되는 현상을 말한다.
+
 
 </div>
 </details>
@@ -281,6 +334,10 @@ child 프로세스의 fork 반환 값: 0
 <details>
 <summary>임계구역 해결 방법엔 어떤 것들이 있나요 ? </summary>
 <div markdown="1">
+
+1. 세마포어
+2. 뮤텍스
+3. 모니터
 
 </div>
 </details>
@@ -302,6 +359,8 @@ child 프로세스의 fork 반환 값: 0
 <summary>데드락이란 무엇인가요 ?</summary>
 <div markdown="1">
 
+
+
 </div>
 </details>
 
@@ -317,6 +376,7 @@ child 프로세스의 fork 반환 값: 0
 <details>
 <summary>경쟁상태란 무엇인가요 ?</summary>
 
+- 여러 프로세스가 공유 자원에 동시에 접근하여, 프로세스들의 공유 자원 접근 순서에 따라 실행 결과가 달라지는 현상이다.
 
 </div>
 </details>
@@ -328,6 +388,7 @@ child 프로세스의 fork 반환 값: 0
 <summary> 🚧 바쁜 대기(busy waiting) 과 block-and-wakeup 방식의 차이점이 무엇인가? </summary>
 <div markdown="1">
 
+- 공유 자원을 사용하기 위해 프로세스가 대기할 때, CPU자원을 소모하는지 아닌지에 따라서 차이가 있다.
 
 <br/>
 
@@ -338,9 +399,12 @@ child 프로세스의 fork 반환 값: 0
 
 
 <details>
-<summary> 🚧 바쁜 (busy waiting) 과 block-and-wakeup 방식은 언제 사용하는가?  
+<summary> 🚧 바쁜 대기(busy waiting) 와 block-and-wakeup 방식은 언제 사용하는가?  
  </summary>
 <div markdown="1">
+
+- 바쁜 대기로 대기하는 시간이 짧고, block-and-wakeup으로 인해 프로세스의 상태 전환 비용이 더 비쌀 경우에 바쁜 대기를 사용한다. 
+- 그 반대의 경우에 block-and-wakeup을 사용한다.
 
 </div>
 </details>
@@ -350,7 +414,7 @@ child 프로세스의 fork 반환 값: 0
 <details>
 <summary> 🚧 세마포어를 잘못 사용할 때 발생할 수 있는 문제점
  </summary>
-<div markdown="1">
+<div markdown="1"> 
 
 </div>
 </details>
