--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -268,6 +268,7 @@ child 프로세스의 fork 반환 값: 0
 <div markdown="1">
 
 - 프로세스는 데이터를 주고 받으며 협업하기 위해서 프로세스간 통신이 필요하다.
+- 
 
 </dib>
 
@@ -280,12 +281,12 @@ child 프로세스의 fork 반환 값: 0
 <summary>프로세스 간 통신의 방식엔 어떤 것들이 있나요 ?</summary>
 <div markdown="1">
 
- 1. 전역 변수 
- 2. 파일
- 3. 익명 파이프
- 4. Named 파이프
- 5. 소켓 
- 6. 원격 프로시저 호출
+- 전역 변수 
+- 파일
+- 익명 파이프
+- Named 파이프
+- 소켓 
+- 원격 프로시저 호출
 
 1. 전역 변수 
    - 전송자가 전역변수에 데이터를 쓰면, 수신자가 전역변수에서 데이터를 읽어간다.
@@ -293,8 +294,8 @@ child 프로세스의 fork 반환 값: 0
    - 단방향 통신
    - 단방향 통신인 이유: 전역 변수 1개를 이용하여 두 프로세스가 동시에 데이터를 전송할 경우, 두 데이터 중 하나는 사라지기 때문이다.
    - 직접적으로 관련있는 프로세스간에 주로 사용  
-   ex) 부모 프로세스와 자식 프로세스   
-   부모 프로세스가 선언한 전역 변수를 이용해 자식 프로세스와 통신할 수 있다.
+      ex) 부모 프로세스와 자식 프로세스 (fork()와 관련)
+      부모 프로세스가 선언한 전역 변수를 이용해 자식 프로세스와 통신할 수 있다.
    - 운영체제가 동기화를 제공하지 않는다.   
    = 바쁜 대기를 돌면서, 전역변수에 값이 들어왔는지 매번 체크해야 한다.
 
@@ -309,12 +310,21 @@ child 프로세스의 fork 반환 값: 0
 2. 익명 파이프
   - 단방향 통신
   - 운영체제에서 동기화를 지원한다. -> 바쁜대기를 하지 않아도 된다. 
-  = 수신자 프로세스가 파이프에 읽기 연산을 수행했을 때, 송신자 프로세스가 아직 파이프에 쓰기 연산을 하지 않았다면 수신자 프로세스는 대기 상태가된다. 이후, 송신자 프로세스가 파이프에 데이터를 쓰는 순가 대기상태에서 풀린다.
+  = 수신자 프로세스가 파이프에 읽기 연산을 수행했을 때, 송신자 프로세스가 아직 파이프에 쓰기 연산을 하지 않았다면 수신자 프로세스는 대기 상태가된다. 이후, 송신자 프로세스가 파이프에 데이터를 쓰는 순간 대기상태에서 풀린다.
   - 부모 프로세스와 자식 프로세스와 같이 서로 관련있는 프로세스간에만 사용
+    - PIPE도 특수한 파일이다.
+      - 파이프는 운영체제에서 임시로 생성되는 파일이고, 접근 가능한 방법은 File Descriptor(파일 디스크립터) 를 공유하는 방법만이 존재합니다.
+      - [reference](https://blog.naver.com/akj61300/80130589983)
+
+    - 부모 자식간 file descriptor가 공유된다. 
+      > The child process shall have its own copy of the parent's file descriptors. Each of the child's file descriptors shall refer to the same open file description with the corresponding file descriptor of the parent.
+      - [reference](https://pubs.opengroup.org/onlinepubs/9699919799/functions/fork.html#tag_16_156_08)
+      - [reference](https://architectophile.tistory.com/9)
 
 3. Named 파이프
   - 단방향 통신  
   - 서로 관련 없는 프로세스간 통신에도 사용된다.
+    - 익명 파이프와의 차이점이다. 익명 파이프의 경우엔 (fork()로 인해 가질수있는 권한으로 볼 수 있는) file descriptor의 복사본을 가지고 있지 않는한 접근할 수 없기 때문이다. 부모 자식간에서만 익명 파이프를 통한 통신을 할 수 있다. 
 
 
 4. 소켓 
@@ -331,13 +341,44 @@ child 프로세스의 fork 반환 값: 0
 <br/>
 
 <details>
+<summary> 🚧 Named 파이프 통신이 서로 관련 없는 프로세스간에서도 가능한 이유? </summary>
+<div markdown="1">
+
+- 리눅스
+  - 익명 파이프 
+  - Named 파이프
+
+- 윈도우
+- Pipe Server - Client 
+    1. Pipe Server가 CreateNamedPipe로 파이프 인스턴스 생성하면서 파이프 이름 짓기 && Pipe Client에게 이름 제공
+    2. Pipe Client는 해당 파이프 이름으로 파이프 검색 
+    3. Pipe Client와 Pipe Server는 해당 파이프로 통신 
+- [reference](https://docs.microsoft.com/ko-kr/windows/win32/ipc/named-pipes)
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 🚧 익명파이프는 파일인 것인가? </summary>
+<div markdown="1">
+
+- 
+
+</div>
+</details>
+
+<br/>
+
+<details>
 <summary>생산자-소비자 문제에 대해서 설명해보세요 </summary>
 <div markdown="1">
 
 - 생산자 프로세스는 공유 버퍼에 물건을 생산에서 넣는 역할을 한다.
 - 소비자 프로세스는 공유 버퍼에서 물건을 꺼내서 소비하는 역할을 한다.
 - 버퍼가 비었는지/가득찼는지 여부를 확인하기 위해, 자원의 총량을 갖는 sum 변수를 사용한다.
-- 생산자 프로세스와 소비자 프로세스가 sum 변수에 동시에 접근하기 때문에, 둘간에 동기화를 하지 않을 경우 sum 변수의 값이 잘 못되는 현상을 말한다.
+- (문제점 : sum 변수 동기화) 생산자 프로세스와 소비자 프로세스가 sum 변수에 동시에 접근하기 때문에, 둘간에 동기화를 하지 않을 경우 sum 변수의 값이 잘 못되는 현상을 말한다. 
 
 </div>
 </details>
@@ -348,12 +389,11 @@ child 프로세스의 fork 반환 값: 0
 <summary>임계구역 해결 방법엔 어떤 것들이 있나요 ? </summary>
 <div markdown="1">
 
-
 - 뮤텍스
 - 세마포어
 - 모니터 
-- 피터슨 알고리즘 
 - 데커 알고리즘 
+- 피터슨 알고리즘 
 
 </div>
 </details>
@@ -366,6 +406,8 @@ child 프로세스의 fork 반환 값: 0
 
 
 - flag와 turn이라는 변수로 임계영역에 들어갈 프로세스(혹은 스레드)를 결정하는 방식
+  - flag : 누가 지금 임계 구역을 사용하는가 ?
+  - turn : 다음에 누가 임계 구역을 사용하는가 ? 
 - 바쁜 대기 알고리즘에 속한다. 
   - 한 프로세스가 이미 임계 영역에 있다면, 다른 프로세스는 전 프로세스가 끝나기를 기다려야 한다.  
 
@@ -382,8 +424,9 @@ child 프로세스의 fork 반환 값: 0
 
 - flag와 turn이라는 변수로 임계영역에 들어갈 프로세스(혹은 스레드)를 결정하는 방식
 - 데커 알고리즘과 유사하지만 다른 프로세스 (혹은 스레드)에게 진입기회를 양보한다는 차이가 있다. 
-- </div>
-  </details>
+- [reference](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=ecarooce&logNo=140050543483)
+</div>
+</details>
 
 <br/>
 
@@ -393,7 +436,7 @@ child 프로세스의 fork 반환 값: 0
 
 
 - 한정된 자원을 여러 프로세스가 사용하려할때, 프로세스가 자원을 할당받지 못해서 다음 처리를 하지 못한채 대기하는 상태입니다. 
-- 두 프로세스가 서로 원하는 자원을 할당받고 있어 무한정 대기 상태에 빠져, 해당 프로세스들이 실행 상태로 변경 될 수 없는 상태입니다. 
+- 2개 이상의 프로세스가 서로 원하는 자원을 할당받고 있어 무한정 대기 상태에 빠져, 해당 프로세스들이 실행 상태로 변경 될 수 없는 상태입니다. 
 
 </div>
 </details>
@@ -431,7 +474,54 @@ child 프로세스의 fork 반환 값: 0
   대표적으로 은행원 알고리즘, 자원 할당 그래프가 있다.
 - 탐지 및 회복(Detection and Recovery)
   교착상태가 발생 할 수 있도록 놔 두고 교착상태가 발생 할 경우 찾아내어 고친다.
+- 무시 
+  데드락을 허용하지만, 해결의 비용이 커서 운영체제가 어떠한 처리도 하지 않음. 
+  현대 운영체제가 채택 중인 방식
 
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary>🚧 은행원 알고리즘 이란 무엇인가요 ?</summary>
+<div markdown="1">
+
+
+- 
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary>🚧 자원 할당 그래프 설명</summary>
+<div markdown="1">
+
+
+- 
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary>🚧 기아 상태란 무엇인가요 ?</summary>
+<div markdown="1">
+
+
+- 
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary>🚧 식사하는 철학자 문제에 대해서 설명해보세요</summary>
+<div markdown="1">
+
+
+- 
 </div>
 </details>
 
@@ -443,7 +533,7 @@ child 프로세스의 fork 반환 값: 0
 
 - 2개 이상의 입력이나 명령이 동시에 발생했을때, 의도하지 않은 결과를 가져오는 경우입니다. 
 - 임계구역으로 인해, 결과 값이 달라질 수 있는 상황을 의미합니다. 
-- 경쟁상태는 교착상태의 부분집합입니다.
+- 교착상태가 발생하기 위해선 경쟁상태여야 한다. 
 - 여러 프로세스가 공유 자원에 동시에 접근하여, 프로세스들의 공유 자원 접근 순서에 따라 실행 결과가 달라지는 현상이다.
 
 </div>
