[2022년 04월 20일] 스터디 진행

--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -264,12 +264,14 @@ child 프로세스의 fork 반환 값: 0
 ---
 
 <details>
-<summary>프로세스 간 통신(IPC)은 왜 필요한가요 ?</summary>
+<summary>프로세스 간 통신은 왜 필요한가요 ?</summary>
 <div markdown="1">
 
 - 프로세스는 데이터를 주고 받으며 협업하기 위해서 프로세스간 통신이 필요하다.
-- 
-
+- 특정 작업을 병렬 처리를 하여, 빠른 실행을 하기 위해 여러 프로세스를 사용할 때, 프로세스간 통신이 필요하다. IPC(Inter-Process Communication) 
+- 인터넷 통신을 위해선, 결국 여러 컴퓨터 간의 프로세스 통신이 필요하다.  RPC (Remote procedure call)
+  > RPCs are a form of inter-process communication (IPC)
+    - [reference](https://en.wikipedia.org/wiki/Remote_procedure_call)
 </dib>
 
 </div>
