--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -84,9 +84,10 @@
 - 뮤텍스: 
   - 프로세스가 값을 관리한다.
   - lock, unlock 상태를 갖는다. 
-  - key를 이용하여 동기화 한다.
+  - key(lock 객체, 오브젝트 키)를 이용하여 동기화 한다.
   - 뮤텍스는 세마포어가 될 수 없다.
     - 이유: 신호체계가 존재하지 않기 때문이다.
+  - spin lock을 한다?
 
 
 <br/>
@@ -98,6 +99,11 @@
 - 출처:  https://velog.io/@codemcd/운영체제OS-9.-프로세스-동기화-2
 - 출처: https://velog.io/@logandev/%EC%84%B8%EB%A7%88%ED%8F%AC%EC%96%B4%EC%99%80-%EB%AE%A4%ED%85%8D%EC%8A%A4-%EC%B0%A8%EC%9D%B4
 
+- 출처: https://velog.io/@youngminss/OS-%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4-%EB%8F%99%EA%B8%B0%ED%99%942
+
+- Mutex 동작방식 출처: https://www.geeksforgeeks.org/mutex-lock-for-linux-thread-synchronization/
+
+- 출처: https://seokbeomkim.github.io/posts/locks-in-the-kernel-2/
 
 </div>
 </details>
@@ -143,7 +149,7 @@
 <br/>
 
 <details>
-<summary>멀티 프로세스가 그런 단점이 있다면 왜 사용하는가? 전부 멀티 스레드로 구현하는 것이 시스템에 이로운 것이 아닌가? </summary>
+<summary>멀티 프로세스가 그런 단점이 있다면 왜 사용하는가? 전부 멀티 스레드로 구현하는 것이 시스템에 이로운 것이 아닌가? (멀티프로세스와 멀티 스레드가 공존하는 이유) </summary>
 <div markdown="1">
 
 
@@ -495,13 +501,9 @@ child 프로세스의 fork 반환 값: 0
 <details>
 <summary>Race Condition(경쟁상태)란 무엇인가요 ?</summary>
 
-
-<<<<<<< HEAD
-=======
 - 2개 이상의 입력이나 명령이 동시에 발생했을때, 의도하지 않은 결과를 가져오는 경우입니다. 
 - 임계구역으로 인해, 결과 값이 달라질 수 있는 상황을 의미합니다. 
 - 경쟁상태는 교착상태의 부분집합입니다.
->>>>>>> remote/main
 - 여러 프로세스가 공유 자원에 동시에 접근하여, 프로세스들의 공유 자원 접근 순서에 따라 실행 결과가 달라지는 현상이다.
 
 </div>
