[2022년 04월 24일] 스터디 진행방향 수정

--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -591,3 +591,22 @@ child 프로세스의 fork 반환 값: 0
 </details>
 
 <br/>
+
+
+<details>
+<summary> 🚧 세마포어 큐 란?</summary>
+</details>
+
+<br/>
+
+<details>
+<summary> 🚧 Mutext가 해제되고, 대기중인 프로세스가 깨어날 때까지 컴퓨터 내부에서 일어나는 동작 </summary>
+</details>
+
+<br/>
+
+<details>
+<summary> 🚧 세마포어는 wait(), signal() 연산 순서에 관계 없이 원활하게 동작한다?? 무슨 의미일까?</summary>
+</details>
+
+<br/>
