[2022년 04월 25일] 리드미 수정

--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -267,8 +267,6 @@ child 프로세스의 fork 반환 값: 0
 
 <br/>
 
----
-
 <details>
 <summary>프로세스 간 통신은 왜 필요한가요 ?</summary>
 <div markdown="1">
@@ -345,37 +343,6 @@ child 프로세스의 fork 반환 값: 0
   - 다른 컴퓨터에 존재하는 메서드를 호출하는 것
   - 일반적으로 소켓을 이용하여 구현한다.
 
-
-</div>
-</details>
-
-<br/>
-
-<details>
-<summary> 🚧 Named 파이프 통신이 서로 관련 없는 프로세스간에서도 가능한 이유? </summary>
-<div markdown="1">
-
-- 리눅스
-  - 익명 파이프 
-  - Named 파이프
-
-- 윈도우
-- Pipe Server - Client 
-    1. Pipe Server가 CreateNamedPipe로 파이프 인스턴스 생성하면서 파이프 이름 짓기 && Pipe Client에게 이름 제공
-    2. Pipe Client는 해당 파이프 이름으로 파이프 검색 
-    3. Pipe Client와 Pipe Server는 해당 파이프로 통신 
-- [reference](https://docs.microsoft.com/ko-kr/windows/win32/ipc/named-pipes)
-
-</div>
-</details>
-
-<br/>
-
-<details>
-<summary> 🚧 익명파이프는 파일인 것인가? </summary>
-<div markdown="1">
-
-- 
 
 </div>
 </details>
@@ -497,6 +464,37 @@ child 프로세스의 fork 반환 값: 0
 - 임계구역으로 인해, 결과 값이 달라질 수 있는 상황을 의미합니다. 
 - 교착상태가 발생하기 위해선 경쟁상태여야 한다. 
 - 여러 프로세스가 공유 자원에 동시에 접근하여, 프로세스들의 공유 자원 접근 순서에 따라 실행 결과가 달라지는 현상이다.
+
+</div>
+</details>
+
+### 딥 다이브 버전
+---
+<details>
+<summary> 🚧 Named 파이프 통신이 서로 관련 없는 프로세스간에서도 가능한 이유? </summary>
+<div markdown="1">
+
+- 리눅스
+  - 익명 파이프 
+  - Named 파이프
+
+- 윈도우
+- Pipe Server - Client 
+    1. Pipe Server가 CreateNamedPipe로 파이프 인스턴스 생성하면서 파이프 이름 짓기 && Pipe Client에게 이름 제공
+    2. Pipe Client는 해당 파이프 이름으로 파이프 검색 
+    3. Pipe Client와 Pipe Server는 해당 파이프로 통신 
+- [reference](https://docs.microsoft.com/ko-kr/windows/win32/ipc/named-pipes)
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 🚧 익명파이프는 파일인 것인가? </summary>
+<div markdown="1">
+
+- 
 
 </div>
 </details>
