--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -338,11 +338,97 @@ child 프로세스의 fork 반환 값: 0
 4. 소켓 
   - 양방향 통신
   - 운영체제에서 동기화를 지원한다. -> 바쁜대기를 하지 않아도 된다.
+  - 소켓을 이용해서 원격 프로세스 통신, 내부 프로세스 통신 모두 가능
 
 5. 원격 프로시저 호출
   - 다른 컴퓨터에 존재하는 메서드를 호출하는 것
   - 일반적으로 소켓을 이용하여 구현한다.
 
+6. 메시지 큐
+  - 커널에서 관리
+  - FIFO
+  - 입출력방식이 named 파이프와 비슷하다. 
+  - named 파이프와 차이점: 파이프는 데이터의 흐름, 메시지 큐는 메모리 공간
+  - 장점: 메시지큐에 담는 데이터에 번호를 붙임으로써, 여러 프로세스가 데이터를 쉽게 다룰 수 있다.
+
+7. 공유 메모리
+  - 프로세스가 커널에게 공유메모리 할당을 요청하면, 커널은 해당 프로세스에게 공유 메모리 공간을 할당한다. (커널 메모리 영역에 할당된다.)
+  - 그럼 다른 프로세스가 해당 공간에 접근해서 데이터를 읽고 쓸 수 있다.  
+  - 공유 메모리를 할당받은 프로세스는 공유 메모리 영역에 자신의 주소 공간을 맵핑해서 사용한다.
+  - 공유 메모리는 커널에서 관리하기 때문에 프로세스가 메모리에서 사라지더라도 메모리 공간에 남아있다.
+  - 장점: 중개자가 없이 바로 메모리에 접근할 수 있으므로 가장 빠르게 동작한다.
+  - 단점: 
+    - 커널 메모리 공간이기 때문에 커널이 허용하는 공유 메모리 크기만큼만 할당받을 수 있다.
+    - 메시지 전달방식이 아니기 때문에 언제 데이터를 읽어가야할지 시점을 알 수 없다.  
+    이 문제를 해결하기 위해서는 다른 IPC 설비를 이용해야 한다.
+  - [출처](https://www.joinc.co.kr/w/Site/system_programing/Book_LSP/ch08_IPC)
+
+8. 메모리 맵
+   - 파일을 프로세스의 메모리 공간과 연결시키는 방식으로 프로세스 간에 메모리를 서로 공유한다.
+   - 공유 메모리와 차이점: 열린 파일을 (프로세스의)메모리 맵에 맵핑시켜서 사용한다. 
+     - 파일은 전역적인 메모리 공간이기 때문에 다른 프로세스와 공유해서 사용해도 문제되지 않는다.
+     - 메모리 맵에 데이터를 쓰면, 메모리 맵과 파일이 연결되어있기 때문에 데이터가 파일에도 써지게된다.
+     - 따라서 다른 프로세스와 파일을 통해서 데이터를 공유할 수 있다.
+   - 장점: 
+     - 파일 입출력 비용을 절약할 수 있다.   
+     파일 입출력을 할 때, open(), read(), write()에서 많은 비용이 소모된다.   
+     메모리 맵을 사용하면 이 함수들을 사용하지 않으므로 비용 절약할 수 있다.  
+     
+     - 메모리 내용을 파일로 남길 수 있다.  
+     일반적으로 메모리 내용은 휘발성이지만, 메모리 맵을 사용하면 파일에 기록이 남기 때문에 정보를 안전하게 보관할 수 있다.  
+
+   - [출처](https://www.joinc.co.kr/w/Site/system_programing/Book_LSP/ch08_IPC)
+
+- 위와 같은 IPC 방법을 사용할 때, race condition이 발생할 수 있다.  
+따라서 이를 막기 위해서 세마포어를 같이 사용한다.
+     
+
+
+---- `아래는 왜 중복되어서 존재하는지 모르겠다..` ---
+1. 전역 변수 
+2. 파일
+3.  익명 파이프
+4.  Named 파이프
+5.  소켓 
+6.  원격 프로시저 호출
+
+7.  전역 변수 
+- 전송자가 전역변수에 데이터를 쓰면, 수신자가 전역변수에서 데이터를 읽어간다.
+- 운영체제의 지원 없이 사용 가능
+- 단방향 통신
+- 단방향 통신인 이유: 전역 변수 1개를 이용하여 두 프로세스가 동시에 데이터를 전송할 경우, 두 데이터 중 하나는 사라지기 때문이다.
+- 직접적으로 관련있는 프로세스간에 주로 사용  
+ex) 부모 프로세스와 자식 프로세스   
+부모 프로세스가 선언한 전역 변수를 이용해 자식 프로세스와 통신할 수 있다.
+- 운영체제가 동기화를 제공하지 않는다.   
+= 바쁜 대기를 돌면서, 전역변수에 값이 들어왔는지 매번 체크해야 한다.
+
+7. 파일
+- 전송자가 파일에 데이터를 쓰면, 수신자가 그 데이터를 읽어가는 방식으로 통신한다.
+- 운영체제의 지원없이 사용 가능
+- 단방향 통신
+- 운영체제가 동기화를 제공하지 않는다.  
+= 부모 프로세스가 wait()함수를 호출하여, 자식 프로세스의 작업이 끝날 때까지 대기하는 방식으로 동기화한다.
+
+
+3. 익명 파이프
+- 단방향 통신
+- 운영체제에서 동기화를 지원한다. -> 바쁜대기를 하지 않아도 된다. 
+= 수신자 프로세스가 파이프에 읽기 연산을 수행했을 때, 송신자 프로세스가 아직 파이프에 쓰기 연산을 하지 않았다면 수신자 프로세스는 대기 상태가된다. 이후, 송신자 프로세스가 파이프에 데이터를 쓰는 순가 대기상태에서 풀린다.
+- 부모 프로세스와 자식 프로세스와 같이 서로 관련있는 프로세스간에만 사용
+
+4. Named 파이프
+- 단방향 통신  
+- 서로 관련 없는 프로세스간 통신에도 사용된다.
+
+
+5. 소켓 
+- 양방향 통신
+- 운영체제에서 동기화를 지원한다. -> 바쁜대기를 하지 않아도 된다.
+
+6. 원격 프로시저 호출
+- 다른 컴퓨터에 존재하는 메서드를 호출하는 것
+- 일반적으로 소켓을 이용하여 구현한다.
 
 </div>
 </details>
@@ -352,52 +438,6 @@ child 프로세스의 fork 반환 값: 0
 <details>
 <summary>생산자-소비자 문제에 대해서 설명해보세요 </summary>
 <div markdown="1">
-   
-   1. 전역 변수 
-   2. 파일
-   3. 익명 파이프
-   4. Named 파이프
-   5. 소켓 
-   6. 원격 프로시저 호출
-
-  1. 전역 변수 
-     - 전송자가 전역변수에 데이터를 쓰면, 수신자가 전역변수에서 데이터를 읽어간다.
-     - 운영체제의 지원 없이 사용 가능
-     - 단방향 통신
-     - 단방향 통신인 이유: 전역 변수 1개를 이용하여 두 프로세스가 동시에 데이터를 전송할 경우, 두 데이터 중 하나는 사라지기 때문이다.
-     - 직접적으로 관련있는 프로세스간에 주로 사용  
-     ex) 부모 프로세스와 자식 프로세스   
-     부모 프로세스가 선언한 전역 변수를 이용해 자식 프로세스와 통신할 수 있다.
-     - 운영체제가 동기화를 제공하지 않는다.   
-     = 바쁜 대기를 돌면서, 전역변수에 값이 들어왔는지 매번 체크해야 한다.
-
-  2. 파일
-    - 전송자가 파일에 데이터를 쓰면, 수신자가 그 데이터를 읽어가는 방식으로 통신한다.
-    - 운영체제의 지원없이 사용 가능
-    - 단방향 통신
-    - 운영체제가 동기화를 제공하지 않는다.  
-    = 부모 프로세스가 wait()함수를 호출하여, 자식 프로세스의 작업이 끝날 때까지 대기하는 방식으로 동기화한다.
-    
-
-  3. 익명 파이프
-    - 단방향 통신
-    - 운영체제에서 동기화를 지원한다. -> 바쁜대기를 하지 않아도 된다. 
-    = 수신자 프로세스가 파이프에 읽기 연산을 수행했을 때, 송신자 프로세스가 아직 파이프에 쓰기 연산을 하지 않았다면 수신자 프로세스는 대기 상태가된다. 이후, 송신자 프로세스가 파이프에 데이터를 쓰는 순가 대기상태에서 풀린다.
-    - 부모 프로세스와 자식 프로세스와 같이 서로 관련있는 프로세스간에만 사용
-
-  4. Named 파이프
-    - 단방향 통신  
-    - 서로 관련 없는 프로세스간 통신에도 사용된다.
-    
-    
-  5. 소켓 
-    - 양방향 통신
-    - 운영체제에서 동기화를 지원한다. -> 바쁜대기를 하지 않아도 된다.
-
-  6. 원격 프로시저 호출
-    - 다른 컴퓨터에 존재하는 메서드를 호출하는 것
-    - 일반적으로 소켓을 이용하여 구현한다.
-
 
 - 생산자 프로세스는 공유 버퍼에 물건을 생산에서 넣는 역할을 한다.
 - 소비자 프로세스는 공유 버퍼에서 물건을 꺼내서 소비하는 역할을 한다.
@@ -491,10 +531,15 @@ child 프로세스의 fork 반환 값: 0
 <br/>
 
 <details>
-<summary> 🚧 익명파이프는 파일인 것인가? </summary>
+<summary> 익명파이프는 파일인 것인가? </summary>
 <div markdown="1">
 
-- 
+- 구현 방식에 따라서 파일일 수도 있고, 변수일 수도 있다.
+- 반면에, Named파이프는 파일이다. 파일 이름이 Named 파이프의 이름이 된다.
+- 네임드 파이프 생성방법
+  1. 표준 라이브러리 이용
+  2. 시스템 라이브러리 이용 
+- [출처](https://www.joinc.co.kr/w/Site/system_programing/Book_LSP/ch08_IPC)
 
 </div>
 </details>
@@ -538,22 +583,18 @@ child 프로세스의 fork 반환 값: 0
 <br/>
 
 <details>
-<summary> 🚧 바쁜 대기(busy waiting) 과 block-and-wakeup 방식의 차이점이 무엇인가? </summary>
+<summary> 바쁜 대기(busy waiting) 과 block-and-wakeup 방식의 차이점이 무엇인가? </summary>
 <div markdown="1">
 
 - 공유 자원을 사용하기 위해 프로세스가 대기할 때, CPU자원을 소모하는지 아닌지에 따라서 차이가 있다.
-
-<br/>
 
 </div>
 </details>
 
 <br/>
 
-
-
 <details>
-<summary> 🚧 바쁜 대기(busy waiting) 와 block-and-wakeup 방식은 언제 사용하는가?  
+<summary> 바쁜 대기(busy waiting) 와 block-and-wakeup 방식은 언제 사용하는가?  
  </summary>
 <div markdown="1">
 
@@ -566,11 +607,49 @@ child 프로세스의 fork 반환 값: 0
 <br/>
 
 <details>
-<summary> 🚧 세마포어를 잘못 사용할 때 발생할 수 있는 문제점
+<summary> 세마포어를 잘 못 했을 때 발생할 수 있는 문제점
  </summary>
 <div markdown="1"> 
 
+1. 프로그래머가 세마포어 사용을 누락한 경우  
+: 임계구역이 보호되지 않는다.
+2. P -> P  
+: 임계 구역 진입을 대기하는 프로세스들이 깨워지지 못하고, 무한 대기하게 된다. 
+3. V -> P  
+: 상호배제가 되지 않는다. -> 임계구역이 보호되지 않는다.
+4. 데드락, 기아현상 
+  ```
+  // P0
+  Wait(S)
+  Wait(Q)
+  ...
+  Signal(S)
+  Signal(Q)
 
+  // P1
+  Wait(Q)
+  Wait(S)
+  ...
+  Signal(Q)
+  Signal(S)
+  ```
+  - 세마포어 Q와 세마포어 S가 1로 초기화 되어있다고 가정한다.
+  - P0는 S를 얻은 뒤, Q를 얻으려고 한다. 
+  - P1은 Q를 얻은 뒤, S를 얻으려고 한다.
+  - 만일 두 프로세스의 실행속도가 비슷하다면 P0가 Wait(S)를 호출하고, P1이 Wait(Q)를 호출했을 때 S는 0가 되고, P도 0가 된다. 
+  - 따라서 P0가 Wait(Q), P1이 Wait(S)를 호출하려고 할 때, 두 프로세스는 서로가 가진 프로세스를 기다리며 블락상태가 된다. -> 데드락 발생
+  - [출처](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=leeinje66&logNo=221547829560)
+
+5. 우선순위 역전
+- CPU 스케쥴링에서 모든 프로세스는 우선순위를 갖는다.
+- 세마포어를 사용하면 우선순위가 역전되어 우선순위가 낮은 프로세스가 우선순위가 높은 프로세스보다 먼저 실행될 수 있다.
+- ex) 프로세스 A, B, C가 존재할 때 프로세스의 우선순위가 A > B > C 라고 하자.
+  - 프로세스 A가 프로세스 C가 가진 자원을 요청하면, 프로세스 A는 프로세스 C가 자원을 릴리즈할 때까지 대기한다.
+  - 이때 프로세스 B가 실행상태가 되어서 C를 선점한다면, 간접적으로 프로세스의 B의 실행시간이 프로세스 A가 대기하는 시간에 영향을 준다.
+- 해결 방법: 우선순위를 2개만 둔다. but 대부분의 운영체제에서 2개는 부족하다.   
+따라서 우선순위 역전 문제를 해결하기 위해 **우선순위 상속 프로토콜**을 사용한다.  
+  - 우선순위 상속 프로토콜: 우선순위가 더 높은 프로세스가 요청한 자원을 갖고 있는 프로세스는 자원을 다 사용할 때까지만 우선순위를 상속받고, 사용이 끝나면 원래 우선순위로 돌아간다.
+- [출처](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=leeinje66&logNo=221547829560)
 </div>
 </details>
 
@@ -578,6 +657,7 @@ child 프로세스의 fork 반환 값: 0
 
 <details>
 <summary> 🚧 모니터 큐 란?</summary>
+<div markdown="1"> 
 </details>
 
 
@@ -586,25 +666,24 @@ child 프로세스의 fork 반환 값: 0
 
 <details>
 <summary> 🚧 세마포어 큐 란?</summary>
+<div markdown="1"> 
+- 프로세스가 세마포어의 wait()(P연산)을 호출했을 때, 임계 구역에 진입할 수 없으면, 세마포어 큐에 프로세스가 등록된 후에 블락상태가 된다.
+- 
 </details>
 
 <br/>
 
 
 <details>
-<summary> 🚧 세마포어 큐 란?</summary>
-</details>
-
-<br/>
-
-<details>
-<summary> 🚧 Mutext가 해제되고, 대기중인 프로세스가 깨어날 때까지 컴퓨터 내부에서 일어나는 동작 </summary>
+<summary> 🚧 Mutext 해제되고, 대기중인 프로세스가 깨어날 때까지 컴퓨터 내부에서 일어나는 동작 </summary>
+<div markdown="1"> 
 </details>
 
 <br/>
 
 <details>
 <summary> 🚧 세마포어는 wait(), signal() 연산 순서에 관계 없이 원활하게 동작한다?? 무슨 의미일까?</summary>
+<div markdown="1"> 
 </details>
 
 <br/>
