[2022년 05월 29일] 스레드 동기화 심화 질문 답변

--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -138,6 +138,7 @@
 1. 세마포어의 wake-up(signal()) signal은 저장되지만, 모니터는 저장 되지 않는다.
 
 2. 세마포어는 wait(), singal()의 호출 순서에 관계 없이 동일하게 동작한다. 모니터는 호출 순서에 따라 동작이 다르다.
+3. 모니터를 세마포어를 이용하여 구현할 수 도/ 구현 안할 수도 있다.
 
 출처: https://lass.cs.umass.edu/~shenoy/courses/fall16/lectures/Lec09.pdf
 
