--- a/도메인 별 동시성 처리 방법/세란/이번주 답변.md
+++ b/도메인 별 동시성 처리 방법/세란/이번주 답변.md
@@ -1,230 +1,192 @@
-### 딥 다이브 버전
----
 <details>
-<summary> Named 파이프 통신이 서로 관련 없는 프로세스간에서도 가능한 이유? </summary>
-<div markdown="1">
-- Pipe Server - Client 
-    1. Pipe Server가 CreateNamedPipe로 파이프 인스턴스 생성하면서 파이프 이름 짓기 && Pipe Client에게 이름 제공
-    2. Pipe Client는 해당 파이프 이름으로 파이프 검색 
-    3. Pipe Client와 Pipe Server는 해당 파이프로 통신 
-- [reference](https://docs.microsoft.com/ko-kr/windows/win32/ipc/named-pipes)
-
-</div>
-</details>
-
-<br/>
-
-<details>
-<summary> 익명파이프는 파일인 것인가? </summary>
+<summary>
+스케줄링은 무엇이고 필요한 이유가 무엇인가요 ?
+</summary>
 <div markdown="1">
 
-- 구현 방식에 따라서 파일일 수도 있고, 변수일 수도 있다.
-- 반면에, Named파이프는 파일이다. 파일 이름이 Named 파이프의 이름이 된다.
-- 네임드 파이프 생성방법
-  1. 표준 라이브러리 이용
-  2. 시스템 라이브러리 이용 
-- [출처](https://www.joinc.co.kr/w/Site/system_programing/Book_LSP/ch08_IPC)
-
+- CPU 스케줄링은 프로세스가 작업을 수행할 때, 언제 어떤 프로세스에 CPU를 할당할지를 결정하는 작업이다.
+- 멀티 스레드 환경, 즉 시분할 환경에서 한정된 CPU 및 I/O장치 등의 시스템 자원을 가지고 최고의 성능을 내야 하고, 따라서 자원을 언제 어떻게 할당할지를 결정해야하기 때문에 필요하다. 
 </div>
 </details>
 
-<br/>
-
 <details>
-<summary>뮤텍스, 세마포어, 모니터가 언어에서 어떻게 사용되나요 ?</summary>
+<summary>
+프로세스의 생명주기에 대해서 설명해보세요
+</summary>
 <div markdown="1">
 
+![프로세스생명주기](프로세스생명주기.png)
 
-- Kotlin
-- Coroutine에서도 멀티스레드와 마찬가지로 race condition이 발생할 수 있다. 동기화 제어를 해주어야한다. 
-
-  - Mutex
-
-    ```kotlin
-     val mutex = Mutex()
-
-    fun main() = runBlocking {
-        println("let's go")
-        
-        concurrencyTest {     //mutex
-            mutex.withLock {
-                counter++
-            }
-        }
-        
-        println("Counter = $counter")
-    }
-    ```
-
-  - Actor
-
-    ```kotlin
-    sealed class CounterMsg
-    object IncCounter : CounterMsg()
-    class GetCounter(val response: CompletableDeferred<Int>) : CounterMsg()
-
-    @ObsoleteCoroutinesApi
-    fun CoroutineScope.counterActor() = actor<CounterMsg> {
-        var counter = 0 // actor state
-        for (msg in channel) {
-            when (msg) {
-                is IncCounter -> counter++
-                is GetCounter -> msg.response.complete(counter)
-            }
-        }
-    }
-
-    @ObsoleteCoroutinesApi
-    fun main() = runBlocking {
-        println("let's go")
-
-        val counterActor = counterActor()  //Actor
-        concurrencyTest {
-            counterActor.send(IncCounter)
-        }
-        val response = CompletableDeferred<Int>()
-        counterActor.send(GetCounter(response))
-
-        val cnt = response.await()
-        counterActor.close() // shutdown the actor
-
-        println("Counter = $cnt")
-    }
-    ```
-
-  - Synchronized
-
-    ```kotlin
-    fun main() = runBlocking {
-        println("let's go")
-        
-        concurrencyTest {     //synchronized
-            synchronized(this) {
-                counter++
-            }
-        }
-        
-        println("Counter = $counter")
-    }
-    ```
-
-  - SingleThreadContext
-
-  - [reference](https://yk-coding-letter.tistory.com/m/16)
-
-- Swift
-
+- CPU 스케줄링의 결정은 다음 두 가지 상태변화에서 이루어진다. 첫 번째는 'Running'에서 'Ready'로 상태가 바뀌는 경우이며, timer interrupt를 하는 경우를 말한다. 두 번째는 'Running'에서 'Waiting'으로 상태가 바뀌는 경우이며, I/O를 할 때가 여기에 해당된다. 
+  
 </div>
 </details>
 
-<br/>
-
 <details>
-<summary> 바쁜 대기(busy waiting) 과 block-and-wakeup 방식의 차이점이 무엇인가? </summary>
+<summary>
+선점 스케줄링과 비선점 스케줄링의 차이점은 무엇인가요? 각각의 예시도 설명해보세요. 
+</summary>
 <div markdown="1">
 
-- 공유 자원을 사용하기 위해 프로세스가 대기할 때, CPU자원을 소모하는지 아닌지에 따라서 차이가 있다.
+- 스케줄링은 OS가 강제적으로 CPU 사용을 중단시키는지 여부에 따라서 크게 두 가지로 나뉘는데, 강제할 경우를 선점형 스케줄링(preemptive scheduling), 강제하지 않는 경우 비선점형 스케줄링(non-preemptive scheduling)이라고 한다.
 
+- 선점형 스케줄링은 time quantum을 가지고 해당 타임 퀀텀이 지나가면, 프로세스가 아직 남아 있더라도 OS가 강제적으로 바꾸어주는 스케줄링 방식이며, 비선점형 스케줄링은 프로세스가 I/O를 하는 상황에서만 수행되는 스케줄링이다. 즉 커널이 자발적으로 I/O를 할 때 까지 기다리는 것이다. 
+
+- 선점형
+  - SRT(Shortest Remaining Time) 스케줄링
+  - 라운드로빈(Round-Robin)스케줄링
+  - 다단계 큐(Multi-level Queue) 스케줄링
+  - 다단계 피드백 큐 스케줄링
+
+- 비선점형
+  - FIFO 스케줄링
+  - HRN(Highest response ratio next) 스케줄링
+  - SJF(Shortest Job First) 스케줄링
+  - 우선순위(priority) 스케줄링
+  - 기한부(Deadline) 스케줄링
 </div>
 </details>
 
-<br/>
-
 <details>
-<summary> 바쁜 대기(busy waiting) 와 block-and-wakeup 방식은 언제 사용하는가?  
- </summary>
+<summary>
+비선점 스케줄링의 특징 (장단점)
+</summary>
 <div markdown="1">
 
-- 바쁜 대기로 대기하는 시간이 짧고, block-and-wakeup으로 인해 프로세스의 상태 전환 비용이 더 비쌀 경우에 바쁜 대기를 사용한다. 
-- 그 반대의 경우에 block-and-wakeup을 사용한다.
+1. 이미 할당된 CPU를 다른 프로세스가 강제로 빼앗아 사용할 수 없는 스케줄링 기법입니다.
+
+2. 프로세스가 CPU를 할당받으면 해당 프로세스가 완료될때까지 CPU를 사용합니다.
+
+3. 프로세스 응답 시간의 예측이 용이하며, 일괄 처리 방식에 적합합니다.
+
+4. 중요한 작업(짧은 작업)이 중요하지 않은 작업(긴 작업)을 기다리는 경우가 발생할 수 있습니다.
+
+5. 비선점 스케줄링의 종류에는 FCFS, SJF, 우선순위, HRN, 기한부 등의 알고리즘이 있습니다.
+</div>
+</details>
+
+
+<details>
+<summary>
+선점 스케줄링의 특징 (장단점)
+</summary>
+<div markdown="1">
+
+1. 하나의 프로세스가 CPU를 할당받아 실행하고 있을 떄 우선순위가 높은 다른 프로세스가 CPU를 강제로 빼앗아 사용할 수 있는 스케줄링 기법입니다.
+
+2. 우선순위가 높은 프로세스를 빠르게 처리할 수 있습니다.
+
+3. 주로 빠른 응답시간을 요구하는 대화식 시분할 시스템에 사용됩니다.
+
+4. 선점 상황이 잦아지면 많은 오버헤드가 발생할 수 있습니다.
+
+5. 선점이 가능하도록 일정 시간 배당에 대한 인터럽트용 타이머 클록이 필요합니다.
+
+6. 선점 스케줄링의 종류에는 라운드로빈, SRT, 선점 우선순위, 다단계 큐, 다단계 피드백 큐 등의 알고리즘이 있습니다.
+   
+</div>
+</details>
+
+<details>
+<summary>
+SRT(Shortest Remaining Time) 스케줄링은 무엇인가요 ?
+</summary>
+<div markdown="1">
+
+- 최단 잔여시간을 순으로 스케줄링 합니다. 
+- 진행 중인 프로세스가 있어도, 최단 잔여시간인 프로세스를 위해 sleep시키고 짧은 프로세스를 먼저 할당합니다.
+- 선점형 SJF 스케줄링이라 불립니다.
+</div>
+</details>
+
+<details>
+<summary>
+다단계 큐(Multi-level Queue) 스케줄링은 무엇인가요 ?
+</summary>
+<div markdown="1">
+
+- 우선순위마다 준비 큐를 생성하고, 항상 가장 높은 우선순위 큐의 프로세스에 CPU를 할당합니다.  (우선순위가 낮은 큐에서 작업 실행 중이더라도 상위 단계의 큐에 프로세스가 도착하면 CPU를 빼앗는 선점형 스케줄링)
+- 각 큐는 라운드 로빈이나 FCFS등 독립적인 스케줄링 사용 가능
+- 우선순위 부여 : 대화형, 배치(Background)등의 프로세스 성격에 따라 
+- 특징
+  - 큐들 간의 프로세스 이동이 불가하기 때문에 스케줄링 부담이 적지만 유연성이 떨어짐
+  - 우선순위가 낮은 프로세스가 오랬동안 CPU 할당을 기다리는 기아 현상이 발생할 수도 있음
+![다단계큐스케줄링](다단계큐스케줄링.png)
+</div>
+</details>
+
+<details>
+<summary>
+다단계 피드백 큐 스케줄링은 무엇인가요 ?
+</summary>
+<div markdown="1">
+</div>
+</details>
+
+<details>
+<summary>
+라운드로빈(Round-Robin)스케줄링은 무엇인가요 ?
+</summary>
+<div markdown="1">
+
+- 시간 조각(time slice)을 정의하여 이 시간이 경과할 때마다 현재 프로세스를 중단하고 다음 프로세스를 실행합니다.
+- 응답 시간이 짧아 시분할 시스템에서 주로 사용합니다.
+- 선점 스케줄링입니다.
+- 장점: 응답 시간이 짧습니다.
+- 단점: 시간 조각이 긴 경우 FIFO 동일하게 작동하여 FIFO 단점을 Round-Robin에서도 볼 수 있습니다.
+</div>
+</details>
+
+
+<details>
+<summary>
+FIFO 스케줄링은 무엇인가요 ?
+</summary>
+<div markdown="1">
+
+- 먼저 요청한 프로세스 순으로 스케줄링합니다. (선착순 방식임)
+- 비선점 스케줄링입니다.
+- 장점: 공정한 스케줄링이며 일괄 처리 시스템에 적합합니다.
+- 단점: 콘보이 효과가 일어날 수 있습니다. 
+  - 콘보이 효과 : CPU를 오래 사용하는 프로세스가 도착하게 되면 다른 프로세스가 CPU를 사용하는데 기다리는 대기 시간이 커지는 현상
+</div>
+</details>
+
+<details>
+<summary>
+SJF(Shortest Job First) 스케줄링은 무엇인가요 ?
+</summary>
+<div markdown="1">
+
+- CPU 작업 시간이 가장 짧은 프로세스 순으로 스케줄링합니다.
+- 비선점 스케줄링입니다.
+- 작업 시간이 동일할 경우 FCFS 정책을 따릅니다.
+- 장점: 평균 대기 시간과 대기 응답 시간이 짧습니다.
+- 단점: 기아 현상이 일어날 수 있습니다. 그뿐만 아니라 프로세스 생성 시 총 실행 시간에 대한 정확한 계산이 힘들다는 단점이 있습니다.
+</div>
+</details>
+
+<details>
+<summary>
+HRN(Highest response ratio next) 스케줄링은 무엇인가요 ?
+</summary>
+<div markdown="1">
+
+- SJF의 기아 문제를 해결하기 위해서 등장한 스케줄링입니다.
+- (대기시간 + 실행시간) / 실행시간을 우선순위로 하여 대기시간을 고려한 스케줄링입니다.
+- 비선점 스케줄링입니다.
 
 </div>
 </details>
 
-<br/>
-
 <details>
-<summary> 세마포어를 잘 못 사용했을 때 발생할 수 있는 문제점
- </summary>
-<div markdown="1"> 
+<summary>
+우선순위(priority) 스케줄링은 무엇인가요 ?
+</summary>
+<div markdown="1">
 
-1. 프로그래머가 세마포어 사용을 누락한 경우  
-: 임계구역이 보호되지 않는다.
-2. P -> P  
-: 임계 구역 진입을 대기하는 프로세스들이 깨워지지 못하고, 무한 대기하게 된다. 
-3. V -> P  
-: 상호배제가 되지 않는다. -> 임계구역이 보호되지 않는다.
-4. 데드락, 기아현상 
-  ```
-  // P0
-  Wait(S)
-  Wait(Q)
-  ...
-  Signal(S)
-  Signal(Q)
-
-  // P1
-  Wait(Q)
-  Wait(S)
-  ...
-  Signal(Q)
-  Signal(S)
-  ```
-  - 세마포어 Q와 세마포어 S가 1로 초기화 되어있다고 가정한다.
-  - P0는 S를 얻은 뒤, Q를 얻으려고 한다. 
-  - P1은 Q를 얻은 뒤, S를 얻으려고 한다.
-  - 만일 두 프로세스의 실행속도가 비슷하다면 P0가 Wait(S)를 호출하고, P1이 Wait(Q)를 호출했을 때 S는 0가 되고, P도 0가 된다. 
-  - 따라서 P0가 Wait(Q), P1이 Wait(S)를 호출하려고 할 때, 두 프로세스는 서로가 가진 프로세스를 기다리며 블락상태가 된다. -> 데드락 발생
-  - [출처](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=leeinje66&logNo=221547829560)
-
-5. 우선순위 역전
-- CPU 스케쥴링에서 모든 프로세스는 우선순위를 갖는다.
-- 세마포어를 사용하면 우선순위가 역전되어 우선순위가 낮은 프로세스가 우선순위가 높은 프로세스보다 먼저 실행될 수 있다.
-- ex) 프로세스 A, B, C가 존재할 때 프로세스의 우선순위가 A > B > C 라고 하자.
-  - 프로세스 A가 프로세스 C가 가진 자원을 요청하면, 프로세스 A는 프로세스 C가 자원을 릴리즈할 때까지 대기한다.
-  - 이때 프로세스 B가 실행상태가 되어서 C를 선점한다면, 간접적으로 프로세스의 B의 실행시간이 프로세스 A가 대기하는 시간에 영향을 준다.
-- 해결 방법: 우선순위를 2개만 둔다. but 대부분의 운영체제에서 2개는 부족하다.   
-따라서 우선순위 역전 문제를 해결하기 위해 **우선순위 상속 프로토콜**을 사용한다.  
-  - 우선순위 상속 프로토콜: 우선순위가 더 높은 프로세스가 요청한 자원을 갖고 있는 프로세스는 자원을 다 사용할 때까지만 우선순위를 상속받고, 사용이 끝나면 원래 우선순위로 돌아간다.
-- [출처](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=leeinje66&logNo=221547829560)
+- 우선 순위가 높은 프로세스에 CPU를 우선 할당하는 방식의 스케줄링합니다.
+- 우선 순위는 시간 제한, 메모리 요구량, 프로세스의 중요성, 자원사용 비용 등에 따라 달라질 수 있습니다.
+- 우선 순위가 같을 경우, FCFS와 다를게 없습니다. (비선점, 선점 둘다 사용됩니다.)
 </div>
 </details>
-
-<br/>
-
-<details>
-<summary> 모니터 큐 란?</summary>
-<div markdown="1"> 
-모니터는 공유자원 + 공유 자원 접근 함수로 이루어져 있고, 2개의 큐를 가지고 있다.
-- 상호베타 큐
-  - 고유자원에 하나의 프로세스만 진입하도록 하기 위한 큐이다. 공유 자원을 사용하는 스레드가 존재하면 상호베타 큐에 존재한다. 
-- 조건동기 큐
-  - 공유 자원의 락이 해제되기를 기다리는 스레드가 대기하는 큐이다. 
-
-출처: https://highright96.tistory.com/103 [highright96:티스토리]
-</details>
-
-<br/>
-
-<details>
-<summary> 세마포어 큐 란?</summary>
-<div markdown="1"> 
-- 프로세스가 세마포어의 wait()(P연산)을 호출했을 때, 임계 구역에 진입할 수 없으면, 세마포어 큐에 프로세스가 등록된 후에 블락상태가 된다.
-</details>
-
-<br/>
-
-
-<details>
-<summary> 🚧 Mutext 해제되고, 대기중인 프로세스가 깨어날 때까지 컴퓨터 내부에서 일어나는 동작 </summary>
-<div markdown="1"> 
-</details>
-
-<br/>
-
-<details>
-<summary> 🚧 세마포어는 wait(), signal() 연산 순서에 관계 없이 원활하게 동작한다?? 무슨 의미일까?</summary>
-<div markdown="1"> 
-</details>
-
-<br/>
